# Credit_Risk

./: .gitignore  Dockerfile  EDA_CreditAnalysis.pbix  README.md  app.py  app2.py  docker-compose.yml  pyproject.toml
.data/: X_test.csv  credits.csv  y_test.csv
mlflowproj/: Dockerfile
mlflowproj/mlruns/0/: meta.yaml
mlflowproj/mlruns/420002559759265287/: meta.yaml
mlflowproj/mlruns/420002559759265287/2b64eb4bed08466a823ffe1bfc296bda/: meta.yaml
mlflowproj/mlruns/420002559759265287/8fac51038ab34c78b5a9196fe75a4ec8/: meta.yaml
mlflowproj/mlruns/420002559759265287/988bfc2fd20a4e06b23659ed88ceed59/: meta.yaml
mlflowproj/mlruns/420002559759265287/9d05485606ae447a92f18a12a75ffa56/: meta.yaml
mlflowproj/mlruns/420002559759265287/ce108905b521414eaf8e7414e3814b3f/: meta.yaml
mlflowproj/mlruns/420002559759265287/e74d1e386549477a81b5ccfca40d79ae/: meta.yaml
mlflowproj/mlruns/993400020501733055/: meta.yaml
mlflowproj/mlruns/993400020501733055/01437e7770c04d90a018c058f9fb923c/: meta.yaml
mlflowproj/mlruns/993400020501733055/0ac90f5249b54601a49d60691ecbc8a1/: meta.yaml
mlflowproj/mlruns/993400020501733055/1058b6bcff2f4f4d8b29a9c6ebbc6a45/: meta.yaml
mlflowproj/mlruns/993400020501733055/10c6540bf1d44932a37b55437debb953/: meta.yaml
mlflowproj/mlruns/993400020501733055/1416b348429745859fa09f574cef4c55/: meta.yaml
mlflowproj/mlruns/993400020501733055/147f58e4e71941cba4464444e1acc698/: meta.yaml
mlflowproj/mlruns/models/Credit_Regression/: meta.yaml
scripts/: EDA.ipynb  predict.py  training_model.py  utils.py
scripts/mlruns/0/: meta.yaml
(+1257 files in other folders)
