[project]
name = "credit-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "matplotlib>=3.10.0",
    "mlflow>=2.20.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pymupdf>=1.25.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "ucimlrepo>=0.0.7",
]
